--- a/index.html
+++ b/index.html
@@ -24,9 +24,40 @@
       </div>
     </div>
     <div class="container">
-      <ul class="list-group">
-        
-      </ul>
+      <form id="frmEvents">
+        <div class="form-row">
+          <div class="col">
+            <input type="text" name="name" class="form-control" placeholder="Name" />
+          </div>
+          <div class="col-4">
+            <input type="text" name="description" class="form-control" placeholder="Description" />
+          </div>
+          <div class="col">
+            <input type="text" name="location" class="form-control" placeholder="Location" />
+          </div>
+          <div class="col">
+            <button type="submit" class="btn btn-primary btn-block">
+              Agregar
+            </button>
+          </div>
+        </div>
+      </form>
+
+      <table id="eventTable" class="table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Location</th>
+            <th>Date</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
+      <ul class="list-group"></ul>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
